  * --xl8file command line option
  * --xlufile command line option
  * --scrfile command line option
  * --doorway command line option
  * --codepage command line option
  * --emulation command line option
  * --status-line command line option
  * --exit-on-completion (-x) command line option
  * X11: Double-height / double-width line support
  * PETSCII Commodore 64 emulation

 -- Kevin Lamonte <lamonte@users.sourceforge.net>  Thu, 27 Apr 2017 18:50:00 -0500

qodem (1.0beta-1) unstable; urgency=low

  * As of May 26, 2015 Qodem is dedicated to the public domain.
  * Numerous bug fixes
  * Switch code repository to github: https://github.com/klamonte/qodem
  * Support for Borland C++ 5.02 compiler
  * Support for Visual C++ 6 compiler
  * Non-blocking connect() for network connection methods
  * Mouse event tracking support for XTERM and LINUX
  * Refactored debug.c into emulation.c
  * Refactored screensaver.c into states.c
  * Refactored status.h into qodem.h
  * Merged Linux, Xterm, and VT100 emulations into a single vt100.c
  * Avatar ansi fallback exposed in qodemrc
  * SSH support switched to cryptlib
  * Compose Key function renamed to Alt Code Key
  * Windows serial port support
  * Windows graphical installer
  * Host mode modem support
  * Translate tables support 8-bit and Unicode separately
  * Back-conversion of Unicode to current 8-bit codepage
  * OSX app bundle (loads qodem-bin in Terminal) + dmg build

 -- Kevin Lamonte <lamonte@users.sourceforge.net>  Wed, 27 Apr 2016 18:50:00 -0500

qodem (1.0alpha-1) unstable; urgency=low

  * --dial command line option
  * mark and space parity limited to 7-bit only
  * Exposed colors as ~/.qodem/colors.cfg
  * PDCurses X11 build via --enable-x11 configure flag
  * ~/.qodem and ~/qodem are now created on first run without asking by default
  * ENQ answerback in qodemrc
  * X11 build spawns x-terminal-emulator for edit file, mail, log view, etc.
  * HTML save format for screen dump and scrollback