@@ -92,6 +92,7 @@ typedef enum Q_OPTIONS {
     Q_OPTION_PETSCII_COLOR,
     Q_OPTION_PETSCII_ANSI_FALLBACK,
     Q_OPTION_PETSCII_WIDE_FONT,
+    Q_OPTION_PETSCII_UNICODE,
     Q_OPTION_ATASCII_WIDE_FONT,
     Q_OPTION_VT52_COLOR,
     Q_OPTION_VT100_COLOR,
