@@ -246,6 +246,91 @@ static wchar_t c64_lowercase_reverse_chars[] = {
 };
 
 /**
+ * The C64/128 characters in uppercase / graphics mode, mapped to Unicode.
+ */
+static wchar_t c64_uppercase_unicode_chars[] = {
+    /* Non-printable C0 set */
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    /* Printable 7-bit ASCII */
+    0x0020, 0x0021, 0x0022, 0x0023, 0x0024, 0x0025, 0x0026, 0x0027,
+    0x0028, 0x0029, 0x002A, 0x002B, 0x002C, 0x002D, 0x002E, 0x002F,
+    0x0030, 0x0031, 0x0032, 0x0033, 0x0034, 0x0035, 0x0036, 0x0037,
+    0x0038, 0x0039, 0x003A, 0x003B, 0x003C, 0x003D, 0x003E, 0x003F,
+    0x0040, 0x0041, 0x0042, 0x0043, 0x0044, 0x0045, 0x0046, 0x0047,
+    0x0048, 0x0049, 0x004A, 0x004B, 0x004C, 0x004D, 0x004E, 0x004F,
+    0x0050, 0x0051, 0x0052, 0x0053, 0x0054, 0x0055, 0x0056, 0x0057,
+    0x0058, 0x0059, 0x005A, 0x005B, 0x00A3, 0x005D, 0x2191, 0x2190,
+    0x2500, 0x2660, 0x2502, 0x2500, 0xE064, 0xE065, 0xE066, 0xE067,
+    0xE068, 0x256E, 0x2570, 0x256F, 0xE06C, 0x2572, 0x2571, 0xE06F,
+    0xE070, 0x2022, 0xE072, 0x2665, 0xE074, 0x256D, 0x2573, 0x25CB,
+    0x2663, 0xE079, 0x2666, 0x253C, 0xE07C, 0x2502, 0x03C0, 0x25E5,
+    /* Non-printable C1 set */
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    /* Printable 8-bit non-ASCII */
+    0x0020, 0x258C, 0x2584, 0x2594, 0x2581, 0x258E, 0x2592, 0xE0A7,
+    0xE0A8, 0x25E4, 0xE0AA, 0x251C, 0x2597, 0x2514, 0x2510, 0x2582,
+    0x250C, 0x2534, 0x252C, 0x2524, 0x258E, 0x258D, 0xE0B6, 0xE0B7,
+    0xE0B8, 0x2583, 0xE0BA, 0x2596, 0x259C, 0x2518, 0x2598, 0x259A,
+    0x2500, 0x2660, 0x2502, 0x2500, 0xE0C4, 0xE0C5, 0xE0C6, 0xE0C7,
+    0xE0C8, 0x256E, 0x2570, 0x256F, 0xE0CC, 0x2572, 0x2571, 0xE0CF,
+    0xE0D0, 0x2022, 0xE0D2, 0x2665, 0xE0D4, 0x256D, 0x2573, 0x25CB,
+    0x2663, 0xE0D9, 0x2666, 0x253C, 0xE0DC, 0x2502, 0x03C0, 0x25E5,
+    0x0020, 0x258C, 0x2584, 0x2594, 0x2581, 0x258E, 0x2592, 0xE0E7,
+    0xE0E8, 0x25E4, 0xE0EA, 0x251C, 0x2597, 0x2514, 0x2510, 0x2582,
+    0x250C, 0x2534, 0x252C, 0x2524, 0x258E, 0x258D, 0xE0F6, 0xE0F7,
+    0xE0F8, 0x2583, 0xE0FA, 0x2596, 0x259C, 0x2518, 0x2598, 0x03C0
+};
+
+/**
+ * The C64/128 characters in lowercase mode, mapped to Unicode.
+ */
+static wchar_t c64_lowercase_unicode_chars[] = {
+    /* Non-printable C0 set */
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    /* Printable 7-bit ASCII */
+    0x0020, 0x0021, 0x0022, 0x0023, 0x0024, 0x0025, 0x0026, 0x0027,
+    0x0028, 0x0029, 0x002A, 0x002B, 0x002C, 0x002D, 0x002E, 0x002F,
+    0x0030, 0x0031, 0x0032, 0x0033, 0x0034, 0x0035, 0x0036, 0x0037,
+    0x0038, 0x0039, 0x003A, 0x003B, 0x003C, 0x003D, 0x003E, 0x003F,
+    0x0060, 0x0061, 0x0062, 0x0063, 0x0064, 0x0065, 0x0066, 0x0067,
+    0x0068, 0x0069, 0x006A, 0x006B, 0x006C, 0x006D, 0x006E, 0x006F,
+    0x0070, 0x0071, 0x0072, 0x0073, 0x0074, 0x0075, 0x0076, 0x0077,
+    0x0078, 0x0079, 0x007A, 0x005B, 0x00A3, 0x005D, 0x2191, 0x2190,
+    0x2500, 0x0041, 0x0042, 0x0043, 0x0044, 0x0045, 0x0046, 0x0047,
+    0x0048, 0x0049, 0x004A, 0x004B, 0x004C, 0x004D, 0x004E, 0x004F,
+    0x0050, 0x0051, 0x0052, 0x0053, 0x0054, 0x0055, 0x0056, 0x0057,
+    0x0058, 0x0059, 0x005A, 0x253C, 0xE17C, 0x2502, 0xE17E, 0xE17F,
+    /* Non-printable C1 set */
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000,
+    /* Printable 8-bit non-ASCII */
+    0x0020, 0x258C, 0x2584, 0x2594, 0x2581, 0x258E, 0x2592, 0xE1A7,
+    0xE1A8, 0xE1A9, 0xE1AA, 0x251C, 0x2597, 0x2514, 0x2510, 0x2582,
+    0x250C, 0x2534, 0x252C, 0x2524, 0x258E, 0x258D, 0xE1B6, 0xE1B7,
+    0xE1B8, 0x2583, 0x2713, 0x2596, 0x259C, 0x2518, 0x2598, 0x259A,
+    0x2500, 0x0041, 0x0042, 0x0043, 0x0044, 0x0045, 0x0046, 0x0047,
+    0x0048, 0x0049, 0x004A, 0x004B, 0x004C, 0x004D, 0x004E, 0x004F,
+    0x0050, 0x0051, 0x0052, 0x0053, 0x0054, 0x0055, 0x0056, 0x0057,
+    0x0058, 0x0059, 0x005A, 0x253C, 0xE17C, 0x2502, 0xE17E, 0xE17F,
+    0x2663, 0xE179, 0x2666, 0x253C, 0xE17C, 0x2502, 0xE1DE, 0xE1DF,
+    0x0020, 0x258C, 0x2584, 0x2594, 0x2581, 0x258E, 0x2592, 0xE1E7,
+    0xE1E8, 0xE1E9, 0xE1EA, 0x251C, 0x2597, 0x2514, 0x2510, 0x2582,
+    0x250C, 0x2534, 0x252C, 0x2524, 0x258E, 0x258D, 0xE1F6, 0xE1F7,
+    0xE1F8, 0x2583, 0x2713, 0x2596, 0x259C, 0x2518, 0x2598, 0xE1FF
+};
+
+/**
  * Reset the emulation state.
  */
 void petscii_reset() {
@@ -906,31 +991,34 @@ petscii_start:
         }
 
         /* This is a printable character, send it out. */
-#if 1
-        if ((state.uppercase == Q_TRUE) && (state.reverse == Q_TRUE)) {
-            *to_screen = c64_uppercase_reverse_chars[from_modem];
-        } else if ((state.uppercase == Q_TRUE) && (state.reverse == Q_FALSE)) {
-            *to_screen = c64_uppercase_normal_chars[from_modem];
-        } else if ((state.uppercase == Q_FALSE) && (state.reverse == Q_TRUE)) {
-            *to_screen = c64_lowercase_reverse_chars[from_modem];
+        if (q_status.petscii_use_unicode == Q_TRUE) {
+            if (state.reverse == Q_TRUE) {
+                q_current_color |= Q_A_REVERSE;
+            } else {
+                q_current_color &= ~Q_A_REVERSE;
+            }
+            if (state.uppercase == Q_TRUE) {
+                *to_screen = c64_uppercase_unicode_chars[from_modem];
+            } else {
+                *to_screen = c64_lowercase_unicode_chars[from_modem];
+            }
         } else {
-            assert((state.uppercase == Q_FALSE) && (state.reverse == Q_FALSE));
-            *to_screen = c64_lowercase_normal_chars[from_modem];
+            if ((state.uppercase == Q_TRUE) && (state.reverse == Q_TRUE)) {
+                *to_screen = c64_uppercase_reverse_chars[from_modem];
+            } else if ((state.uppercase == Q_TRUE) &&
+                (state.reverse == Q_FALSE)
+            ) {
+                *to_screen = c64_uppercase_normal_chars[from_modem];
+            } else if ((state.uppercase == Q_FALSE) &&
+                (state.reverse == Q_TRUE)
+            ) {
+                *to_screen = c64_lowercase_reverse_chars[from_modem];
+            } else {
+                assert((state.uppercase == Q_FALSE) &&
+                    (state.reverse == Q_FALSE));
+                *to_screen = c64_lowercase_normal_chars[from_modem];
+            }
         }
-#else
-        if ((state.uppercase == Q_TRUE) && (state.reverse == Q_TRUE)) {
-            *to_screen = from_modem + 0xE200;
-        } else if ((state.uppercase == Q_TRUE) && (state.reverse == Q_FALSE)) {
-            *to_screen = from_modem + 0xE000;
-        } else if ((state.uppercase == Q_FALSE) && (state.reverse == Q_TRUE)) {
-            *to_screen = from_modem + 0xE300;
-        } else {
-            assert((state.uppercase == Q_FALSE) && (state.reverse == Q_FALSE));
-            *to_screen = from_modem + 0xE100;
-        }
-
-#endif
-
         return Q_EMUL_FSM_ONE_CHAR;
 
     } /* switch (scan_state) */
@@ -1126,4 +1214,58 @@ wchar_t * petscii_keystroke(const int keystroke) {
     }
 
     return NULL;
+}
+
+/**
+ * Convert a printable ASCII character into a PETSCII printable character.
+ *
+ * @param ascii a value in the range of 0x20 - 0x7E, inclusive
+ * @return a byte that can be transmitted to a PETSCII system, reflecting the
+ * current shift state
+ */
+unsigned char petscii_ascii_to_petscii(const unsigned char ascii) {
+    if ((ascii < 0x20) || (ascii >= 0x7F)) {
+        return ascii;
+    }
+
+    if ((ascii >= ' ') && (ascii <= '?')) {
+        return ascii;
+    }
+
+    switch (ascii) {
+    case '[':
+    case ']':
+        return ascii;
+    default:
+        break;
+    }
+
+    if (state.uppercase == Q_TRUE) {
+        /*
+         * Uppercase is present, but lowercase letters are out of luck.
+         */
+        if ((ascii >= 'A') && (ascii <= 'Z')) {
+            return ascii;
+        }
+    } else {
+        /*
+         * Uppercase and lowercase are both present, but in reversed
+         * position.
+         */
+        if ((ascii >= 'A') && (ascii <= 'Z')) {
+            return ascii + 0x20;
+        } else if ((ascii >= 'a') && (ascii <= 'z')) {
+            return ascii - 0x20;
+        }
+    }
+
+    /*
+     * The rest of the ASCII characters have no counterpart in PETSCII.
+     * These are:
+     *
+     *   \\ ^ _ ` { | } ~
+     *
+     * Return them as-is, and let the user see the wrong thing.
+     */
+    return ascii;
 }
